--- a/react-app/Dockerfile
+++ b/react-app/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:23.3.0-alpine3.20
 WORKDIR /app
 COPY . .
-# RUN npm install
+RUN npm install
 ENV API_URL=http://api/myapp.com
+EXPOSE 3000
